edusweep: Centralise inspector launching code
No need to keep reimplementing the launcher code in each form

--- a/EduSweep 2/EduSweep 2.csproj
+++ b/EduSweep 2/EduSweep 2.csproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\FormStatus.cs" />
+    <Compile Include="Common\Inspector.cs" />
     <Compile Include="Common\Logging.cs">
       <SubType>Code</SubType>
     </Compile>
