edutils: Use singleton pattern for settings
The new SettingsManager singleton class prevents other classes from holding outdated cached settings data that may cause settings to be lost or ignored

--- a/EdUtils/EdUtils.csproj
+++ b/EdUtils/EdUtils.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Settings\IAppSettings.cs" />
     <Compile Include="Helpers\Utils.cs" />
     <Compile Include="Settings\LogLevel.cs" />
+    <Compile Include="Settings\SettingsManager.cs" />
     <Compile Include="Signatures\BinarySignatureElement.cs" />
     <Compile Include="Signatures\ExtensionSignatureElement.cs" />
     <Compile Include="Signatures\KeywordSignatureElement.cs" />
