--- a/EdUtils/packages.config
+++ b/EdUtils/packages.config
@@ -4,6 +4,9 @@
   <package id="Config.Net" version="4.13.2" targetFramework="net462" />
   <package id="Config.Net.Json" version="4.13.2" targetFramework="net462" />
   <package id="Crc32.NET" version="1.2.0" targetFramework="net46" />
+  <package id="Mime" version="3.0.2" targetFramework="net462" />
+  <package id="MimeTypesMap" version="1.0.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="NLog" version="4.5.11" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
 </packages>
