--- a/EduEngine/packages.config
+++ b/EduEngine/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Mime" version="3.0.2" targetFramework="net462" />
+  <package id="MimeTypesMap" version="1.0.3" targetFramework="net462" />
   <package id="nClam" version="4.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="NLog" version="4.5.11" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
