utils: Move FileSizeClass into its own file
Signed-off-by: Paul Beesley <paulbeesley3@users.noreply.github.com>

--- a/EdUtils/EdUtils.csproj
+++ b/EdUtils/EdUtils.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="Detections\Detection.cs" />
     <Compile Include="Detections\DetectionType.cs" />
+    <Compile Include="Filesystem\FileSizeClass.cs" />
     <Compile Include="Filesystem\PathType.cs" />
     <Compile Include="Filesystem\AppFolders.cs" />
     <Compile Include="Helpers\Checksums.cs" />
