--- a/File Inspector/packages.config
+++ b/File Inspector/packages.config
@@ -3,7 +3,10 @@
   <package id="Castle.Core" version="4.3.1" targetFramework="net462" />
   <package id="Config.Net" version="4.13.2" targetFramework="net462" />
   <package id="Config.Net.Json" version="4.13.2" targetFramework="net462" />
+  <package id="Mime" version="3.0.2" targetFramework="net462" />
+  <package id="MimeTypesMap" version="1.0.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="NLog" version="4.5.11" targetFramework="net46" />
   <package id="NLog.Windows.Forms" version="4.2.3" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
 </packages>
